--- a/pwa version tracker/index.html
+++ b/pwa version tracker/index.html
@@ -26,7 +26,7 @@
 
     <!-- The Pomodoro Timer Section -->
     <section class="timer-section">
-      <h2 id="timer-indicator">Work Time</h2>
+      <h2 id="timer-indicator">Pomodoro Timer</h2>
       <div id="timer">25:00</div>
       <div class="timer-buttons">
         <button id="startBtn">Start</button>
